Made some changes to all of the files. Organized better html and css and added bold and italic functionalities

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
-    <div class="center">
-        <textarea id="input"></textarea>
+    <div>
+        <div class="buttons">
+            <button id="b-button" class="option-button"><b>B</b></button>
+            <button id="i-button" class="option-button"><i>I</i></button>
+        </div>
+        <div contenteditable="true" id="input"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
