Added undo and redo functions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div class="buttons">
             <button id="b-button" class="option-button"><b>B</b></button>
             <button id="i-button" class="option-button"><i>I</i></button>
+            <button id="undo-button" class="option-button">&#8592;</button>
+            <button id="redo-button" class="option-button">&#8594;</button>
         </div>
         <div contenteditable="true" id="input"></div>
     </div>
